# convert-md-to-rt

./: .gitignore  .releaserc.json  README.md  install_simple.sh  pyproject.toml  requirements.txt  run_md2rt.command
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml
src/md2rt/: __init__.py  clipboard.py  converter.py  detector.py  menubar.py  menubar_debug.py  runner.py
tests/: test_clipboard.py  test_converter.py  test_detector.py
